--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "next": "9.5.5",
     "postcss-preset-env": "^6.7.0",
+    "prismic-reactjs": "^1.3.3",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "tailwindcss": "^1.9.3"
+  },
+  "devDependencies": {
+    "prismic-javascript": "^3.0.2"
   }
 }
