--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.2.0",
     "next": "9.5.5",
     "postcss-preset-env": "^6.7.0",
     "prismic-reactjs": "^1.3.3",
@@ -16,6 +17,7 @@
     "tailwindcss": "^1.9.3"
   },
   "devDependencies": {
+    "moment": "^2.29.1",
     "prismic-javascript": "^3.0.2"
   }
 }
