--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
-    "next": "9.5.5",
+    "next": "^10.0.3",
     "postcss-preset-env": "^6.7.0",
     "prismic-reactjs": "^1.3.3",
     "react": "16.14.0",
