--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.2.0",
-    "next": "^10.0.3",
+    "next": "^13.0.1",
     "postcss-preset-env": "^6.7.0",
     "prismic-reactjs": "^1.3.3",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "tailwindcss": "^1.9.3"
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
+    "autoprefixer": "^10.4.13",
     "moment": "^2.29.4",
-    "prismic-javascript": "^3.0.2"
+    "postcss": "^8.4.18",
+    "prismic-javascript": "^3.0.2",
+    "tailwindcss": "^3.2.1"
   }
 }
