--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.1",
     "next": "^13.0.1",
     "postcss-preset-env": "^6.7.0",
     "prismic-reactjs": "^1.3.3",
@@ -19,7 +20,6 @@
     "autoprefixer": "^10.4.13",
     "moment": "^2.29.4",
     "postcss": "^8.4.18",
-    "prismic-javascript": "^3.0.2",
     "tailwindcss": "^3.2.1"
   }
 }
