--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prismicio/client": "^6.7.1",
     "next": "^13.0.1",
     "postcss-preset-env": "^6.7.0",
+    "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.3",
     "react": "^18",
     "react-dom": "^18"
