--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
+    "gray-matter": "^4.0.3",
     "next": "^13.0.1",
     "postcss-preset-env": "^6.7.0",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
