--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@agentofuser/remark-oembed": "^1.0.4",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "next": "^13.0.1",
     "postcss-preset-env": "^6.7.0",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-raw": "^6.1.1",
+    "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-unwrap-images": "^3.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
