--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.29.0",
     "rehype-raw": "^6.1.1",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
