--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "remark-rehype": "^10.1.0",
-    "remark-unwrap-images": "^3.0.1"
+    "remark-unwrap-images": "^3.0.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
