--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@agentofuser/remark-oembed": "^1.0.4",
+    "@mdx-js/loader": "^2.1.5",
+    "@next/mdx": "^13.0.4",
     "@vercel/analytics": "^0.1.5",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
@@ -17,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.29.0",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^6.1.1",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
@@ -29,6 +32,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.13",
     "moment": "^2.29.4",
+    "next-mdx-remote": "^4.2.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
