--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.4",
     "next-mdx-remote": "^4.2.0",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.1",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
