--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-slick": "^0.29.0",
     "react-syntax-highlighter": "^15.5.0",
+    "rss": "^1.2.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
@@ -29,5 +30,10 @@
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "tailwindcss-animate": "^1.0.5"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
