--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/mdx": "^13.0.4",
     "@vercel/analytics": "^0.1.5",
     "date-fns": "^2.29.3",
+    "dateformat": "^5.0.3",
     "gray-matter": "^4.0.3",
     "next": "^13.0.1",
     "postcss-preset-env": "^6.7.0",
