--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^13.0.1",
     "postcss-preset-env": "^6.7.0",
     "react": "^18",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "^18",
     "react-slick": "^0.29.0",
     "react-syntax-highlighter": "^15.5.0",
