--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blog",
-  "version": "0.1.0",
+  "name": "andrewmillen.com",
+  "version": "8.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
