--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/loader": "^2.1.5",
     "@next/mdx": "^13.0.4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@vercel/analytics": "^1.3.2",
     "date-fns": "^2.29.3",
     "dateformat": "^5.0.3",
@@ -30,7 +31,7 @@
     "moment": "^2.29.4",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.5"
   },
   "browser": {
