--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/analytics": "^1.3.2",
     "date-fns": "^2.29.3",
     "dateformat": "^5.0.3",
+    "embla-carousel-react": "^8.6.0",
     "gray-matter": "^4.0.3",
     "next": "^15.1.7",
     "postcss-preset-env": "^6.7.0",
