--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "react": "^19.0.0",
     "react-compare-slider": "^3.1.0",
     "react-dom": "^19.0.0",
-    "react-slick": "^0.30.3",
     "react-syntax-highlighter": "^15.5.0",
-    "rss": "^1.2.2",
-    "slick-carousel": "^1.8.1"
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
